--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <html>
 	<head>
+		<link rel="stylesheet" href="estilo.css">
 	</head>
-		<body>
-			<h1>Projeto do Gustavo Soares</h1>
-		</body>
+
+	<body>
+		<h1>Git</h1>
+		<h2>Trabalhando em Equipe com Controle e Segurança</h2>
+
+		<p>
+			Um curso que explore os benefícios de utilizar o Git como ferramenta
+			de controle de versão para projetos em qualquer linguagem, em qualquer
+			plataforma
+		</p>
+
+		<h2>Principais benefícios:</h2>
+		<ul>
+			<li>Funciona de maneira distribuida</li>	
+			<li>Permite a edição concorrente de arquivos do projeto</li>
+		</ul>
+
+	</body>
 </html>
